# Ugaris_Server_Rust

./: .gitignore  Cargo.toml  DRIVER_PORTING_PLAN.md  PORTING_LEDGER.md  PORTING_TODO.md  PROGRESS_ARCHIVE.md  README.md  compose.yaml
crates/ugaris-core/: Cargo.toml
crates/ugaris-core/src/: achievement.rs  area_section.rs  area_sound.rs  attack.rs  character_driver.rs  clan.rs  club.rs  combat.rs  config.rs  direction.rs  do_action.rs  drvlib.rs  dungeon_maze.rs  effect.rs  entity.rs  error.rs  game_settings.rs  game_time.rs  ids.rs  item_driver.rs  item_ops.rs  key_registry.rs  legacy.rs  lib.rs  light.rs  log_text.rs  macro_daemon.rs  map.rs  path.rs  pentagram.rs  player.rs  quest.rs  scheduler.rs  sector.rs  see.rs  spell.rs  tell.rs  text.rs  tick.rs  world.rs  (+1 more)
crates/ugaris-core/src/achievement/: defs.rs  mod.rs  state.rs  stats.rs  tests.rs  types.rs
crates/ugaris-core/src/character_driver/: dispatch.rs  ids.rs  misc.rs  mod.rs  simple_baddy.rs  state.rs  text_qa.rs
crates/ugaris-core/src/clan/: economy.rs  mod.rs  registry.rs  relations.rs  tests.rs
crates/ugaris-core/src/do_action/: combat.rs  items.rs  magic.rs  mod.rs  movement.rs  tests.rs
crates/ugaris-core/src/item_driver/: alchemy.rs  area11_palace.rs  area12_mine.rs  area13_dungeon.rs  area14_random.rs  area15_swamp.rs  area16_forest.rs  area17_two.rs  area18_bones.rs  area19_nomad.rs  area2.rs  area20_lq.rs  area22_lab.rs  area23_24.rs  area25_warped.rs  area26_staffer.rs  area28_forest.rs  area29_brannington.rs  area30_clan.rs  area31_warrmines.rs  area32_missions.rs  area33_tunnel.rs  area34_teufel.rs  area36_caligar.rs  area37_arkhata.rs  area38_shrike.rs  area4_pents.rs  area6_edemon.rs  area8_fdemon.rs  arena.rs  assemble.rs  books.rs  chests.rs  dispatch.rs  doors.rs  food.rs  helpers.rs  ice.rs  ids.rs  lights.rs  (+11 more)
crates/ugaris-core/src/player/: actions.rs  area1.rs  area3.rs  areas_misc.rs  arena.rs  chests.rs  governor.rs  keyring.rs  labs.rs  lq.rs  military.rs  misc.rs  mod.rs  pk.rs  questlog.rs  settings.rs  shrines.rs  staffer.rs  strategy.rs  transport.rs  tunnel.rs  twocity.rs
crates/ugaris-db/: Cargo.toml
crates/ugaris-db/src/: achievement.rs  anticheat.rs  area.rs  auction.rs  character.rs  clan.rs  clan_log.rs  lib.rs  merchant.rs  military.rs  notes.rs  pentagram.rs
crates/ugaris-db/tests/: postgres_roundtrip.rs
crates/ugaris-net/: Cargo.toml
crates/ugaris-net/src/: lib.rs  server.rs  session.rs
crates/ugaris-server/: Cargo.toml
crates/ugaris-server/src/: achievement.rs  area1.rs  area11.rs  area16.rs  area17.rs  area19.rs  area20.rs  area22.rs  area23_24.rs  area25.rs  area26.rs  area28.rs  area29.rs  area3.rs  area31.rs  area32.rs  area33.rs  area34.rs  area36.rs  area37.rs  area8.rs  area8_army.rs  area_apply.rs  auction.rs  chests.rs  clan_command.rs  clan_log.rs  commands_admin.rs  commands_chat.rs  commands_player.rs  constants.rs  containers.rs  cross_area.rs  depot.rs  dungeon.rs  effects_sync.rs  events.rs  inventory.rs  item_apply.rs  keyring.rs  (+53 more)
(+776 files in other folders)
