[workspace]
resolver = "2"
members = [
    "crates/ugaris-core",
    "crates/ugaris-db",
    "crates/ugaris-net",
    "crates/ugaris-protocol",
    "crates/ugaris-server",
]

[workspace.package]
edition = "2021"
license = "Proprietary"
rust-version = "1.76"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bitflags = { version = "2.6", features = ["serde"] }
bytes = "1.7"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "json", "migrate"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
