[package]
name = "ugaris-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
ugaris-core = { path = "../ugaris-core" }

[dev-dependencies]
serde_json = "1.0"
tokio.workspace = true
