[package]
name = "ugaris-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
ugaris-core = { path = "../ugaris-core" }
ugaris-protocol = { path = "../ugaris-protocol" }
