[package]
name = "ugaris-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"
bytes.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ugaris-core = { path = "../ugaris-core" }
ugaris-db = { path = "../ugaris-db" }
ugaris-net = { path = "../ugaris-net" }
ugaris-protocol = { path = "../ugaris-protocol" }
